@@ -2,9 +2,7 @@ package com.woomoolmarket.security.config;
 
 import com.woomoolmarket.security.oauth2.CustomOAuth2Provider;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.EnumUtils;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -15,29 +13,29 @@ import org.springframework.security.oauth2.client.registration.InMemoryClientReg
 @Configuration
 @RequiredArgsConstructor
 @EnableConfigurationProperties(OAuth2Properties.class)
-public class OAuth2SecurityConfig {
+public class OAuth2Config {
 
   private final OAuth2Properties oAuth2Properties;
 
   @Bean
   public ClientRegistrationRepository clientRegistrationRepository() {
-    List<ClientRegistration> registrations = oAuth2Properties.getRegistration()
+    List<ClientRegistration> registrations = oAuth2Properties.registration()
       .keySet()
       .stream()
       .map(this::getRegistration)
-      .collect(Collectors.toList());
+      .toList();
 
     return new InMemoryClientRegistrationRepository(registrations);
   }
 
   private ClientRegistration getRegistration(OAuth2Properties.Client client) {
-    OAuth2Properties.Resource resource = oAuth2Properties.getRegistration().get(client);
-    String clientName = resource.getClientName();
+    OAuth2Properties.Resource resource = oAuth2Properties.registration().get(client);
+    String clientName = resource.clientName();
 
-    return EnumUtils.getEnumIgnoreCase(CustomOAuth2Provider.class, clientName)
+    return CustomOAuth2Provider.valueOfCaseInsensitively(clientName)
       .getBuilder(clientName)
-      .clientId(resource.getClientId())
-      .clientSecret(resource.getClientSecret())
+      .clientId(resource.clientId())
+      .clientSecret(resource.clientSecret())
       .build();
   }
 }
